--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -24,3 +24,64 @@ button:active {
   box-shadow: 3px 3px 3px #666;
   -webkit-transform: translateY(2px);
 }
+
+//
+//page-home {
+//
+//}
+//
+//button {
+//  outline: none;
+//  background-color: color($colors, primary, base);
+//  border: none;
+//  border-radius: 15px;
+//  box-shadow: 4px 4px 3px #999;
+//  color: white;
+//  padding: 15px 32px;
+//  text-align: center;
+//  text-decoration: none;
+//  display: inline-block;
+//  font-size: 35px;
+//  margin: 4px 2px;
+//  cursor: pointer;
+//  width: 500px;
+//  left: 45%;
+//}
+//
+//button:hover {
+//  filter: brightness(90%);
+//}
+//
+//button:active {
+//  filter: brightness(90%);
+//  box-shadow: 3px 3px 3px #666;
+//  -webkit-transform: translateY(2px);
+//}
+//
+//#header {
+//  background-color: blue;
+//  color: white;
+//  text-align: center;
+//  font-size: 30px;
+//}
+//
+//#main {
+//  position: fixed;
+//  font-size: 30px;
+//  font-family: monospace;
+//  left:33%;
+//}
+//
+//#nav {
+//  list-style: none;
+//  position: fixed;
+//  left: 47%;
+//  font-size: 30px;
+//  color: green;
+//}
+//
+//#button {
+//  position: fixed;
+//  top: 70%;
+//  left: 30%;
+//}
