Official Mac Hex Values. Added SVG Mac logo

--- a/src/components/student-queue/student-queue.html
+++ b/src/components/student-queue/student-queue.html
@@ -4,6 +4,9 @@
   </ion-list-header>
   <ion-item *ngFor="let student of studentQueue$ | async">
     {{ student.name }}
-    <button ion-button item-end (click)="removeMockStudent(student)"><ion-icon name="close"></ion-icon></button>
+    <button ion-button clear color="danger" item-end
+            (click)="removeMockStudent(student)">
+      <ion-icon name="close"></ion-icon>
+    </button>
   </ion-item>
 </ion-list>
