--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -39,8 +39,8 @@ $colors: (
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222,
-  macBlue:    #074368,
-  macOrange:  #D0462A
+  macBlue:    #01426A,
+  macOrange:  #D44420
 );
 
 
