Added in functionality containing addStudent and removeStudent functions. The database now updates when a student is added or removed.

--- a/src/components/student-queue/student-queue.html
+++ b/src/components/student-queue/student-queue.html
@@ -5,7 +5,7 @@
   <ion-item *ngFor="let student of studentQueue$ | async">
     {{ student.name }}
     <button ion-button clear color="danger" item-end
-            (click)="removeMockStudent(student)">
+            (click)="removeStudent(student)">
       <ion-icon name="close"></ion-icon>
     </button>
   </ion-item>
