Check in and queue page styling

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -38,9 +38,7 @@ $colors: (
   secondary:  #D44420,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222,
-  macBlue:    #01426A,
-  macOrange:  #D44420
+  dark:       #222
 );
 
 
