--- a/src/components/student-queue/student-queue.html
+++ b/src/components/student-queue/student-queue.html
@@ -1,5 +1,5 @@
 <ion-list>
-  <ion-list-header>
+  <ion-list-header color='primary'>
     Students in Line:
   </ion-list-header>
   <ion-item *ngFor="let student of studentQueue$ | async">
