--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,7 +1,26 @@
 page-home {
   .app-title{
     font-size: 2.0em;
-    font-family: "Times New Roman";
+  }
+
+  .round-button {
+    display:block;
+    width:250px;
+    height:200px;
+    line-height:50px;
+    border: 4px solid #f5f5f5;
+    border-radius: 50%;
+    color:#f5f5f5;
+    text-align:center;
+    background: #464646;
+    box-shadow: 0 0 3px gray;
+    font-size:30px;
+    font-weight:bold;
+    left:41%; //Moves the element to the left by 50%
+
+  }
+  .round-button:hover {
+    background: #262626;
   }
 }
 
