Added number and title to Course interface. Edited files that used name instead of number

--- a/src/components/course-list/course-list.html
+++ b/src/components/course-list/course-list.html
@@ -1,6 +1,6 @@
 <ion-list>
   <button ion-item *ngFor="let course of courses"
           [navPush]="nextPage" [navParams] ={course:course}>
-    {{ course.name }}
+    {{ course.number }}
   </button>
 </ion-list>
