--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,24 +1,67 @@
 page-home {
-  .app-title{
-    font-size: 2.0em;
+
+  .app-title {
+    margin-top: 5%;
+
+    #title {
+      font-size: 2.0em;
+      font-family: fantasy;
+    }
+
   }
 
-  .round-button {
+  .body{
+    //background: repeating-linear-gradient(to bottom, royalblue 51%, deepskyblue);
+    //background: repeating-linear-gradient(to bottom, #D44420 0%, darkorange);
+    //background: url("../../../resources/mac_logo.png")
+  }
+
+  .round-button1 {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 330px;
+    margin-bottom: auto;
+
     display:block;
-    width:250px;
-    height:200px;
+    width:200px;
+    height:40px;
     line-height:50px;
-    border: 4px solid #f5f5f5;
-    border-radius: 50%;
+    //border: 4px solid #f5f5f5;
+    //border-radius: 50%;
     color:#f5f5f5;
-    text-align:center;
-    background: #464646;
-    box-shadow: 0 0 3px gray;
-    font-size:30px;
-    font-weight:bold;
-    left:41%; //Moves the element to the left by 50%
 
+    text-align:center;
+    //background: #464646;
+    background-color: transparentize(#464646, 0.6);
+
+    box-shadow: 0 0 3px gray;
+    font-size:20px;
+    font-weight:bold;
   }
+
+  .round-button2 {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+    margin-bottom: 30px;
+
+    display:block;
+    width:200px;
+    height:40px;
+    line-height:50px;
+    //border: 4px solid royalblue;
+    //border-radius: 50%;
+    //color:#f5f5f5;
+
+    text-align:center;
+    //background: #464646;
+    background-color: transparentize(#464646, 0.6);
+
+    box-shadow: 0 0 3px gray;
+    font-size:20px;
+    font-weight:bold;
+  }
+
   .round-button:hover {
     background: #262626;
   }
