--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -38,7 +38,9 @@ $colors: (
   secondary:  #D44420,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  macorange:  #D44420
+
 );
 
 
