--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -15,6 +15,6 @@
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
 
-ion-content {
-  background-image: url(../../resources/Solid_black.png);
+.global__input-error {
+  color: red;
 }
