--- a/src/components/course-list/course-list.html
+++ b/src/components/course-list/course-list.html
@@ -1,6 +1,55 @@
 <ion-list>
-  <button class="courselist" ion-item *ngFor="let course of courses"
-          [navPush]="nextPage" [navParams] ={course:course}>
-    {{ course.number }}
-  </button>
+  <ion-list-header *ngIf="profile.student" no-lines no-padding no-margin>
+    <button
+      detail-none
+      name="student"
+      ion-item
+      (click)="toggleSection($event)">
+      <ion-icon item-left name="arrow-dropright" *ngIf="!studentButton"></ion-icon>
+      <ion-icon item-left name="arrow-dropdown" *ngIf="studentButton"></ion-icon>
+      Attending</button>
+    <ion-list *ngIf="studentButton">
+      <div *ngFor="let course of courseList">
+        <button
+          class="courselist"
+          detail-none
+          ion-item
+          *ngIf="profile.student.courses.indexOf(course.key) > -1"
+          [navPush]="'StudentCheckInPage'"
+          [navParams]={course:course}>
+            {{ course.number }}
+            <br>
+            <h3>{{ course.title }}</h3>
+            <ion-icon item-end name="arrow-forward"></ion-icon>
+        </button>
+      </div>
+    </ion-list>
+  </ion-list-header>
+  <ion-list-header *ngIf="profile.instructor" no-lines no-padding no-margin>
+    <button
+      detail-none
+      name="instructor"
+      ion-item
+      (click)="toggleSection($event)">
+      <ion-icon item-left name="arrow-dropright" *ngIf="!instructorButton"></ion-icon>
+      <ion-icon item-left name="arrow-dropdown" *ngIf="instructorButton"></ion-icon>
+      Instructing</button>
+    <ion-list *ngIf="instructorButton">
+      <div *ngFor="let course of courseList">
+        <button
+          class="courselist"
+          detail-none
+          ion-item
+          *ngIf="profile.instructor.courses.indexOf(course.key) > -1"
+          [navPush]="'ClassQueuePage'"
+          [navParams]={course:course}>
+            {{ course.number }}
+            <br>
+            <h3>{{ course.title }}</h3>
+            <ion-icon item-end name="arrow-forward"></ion-icon>
+        </button>
+      </div>
+    </ion-list>
+  </ion-list-header>
 </ion-list>
+
