Added sign out feature
Signed-off-by: Juan David Garrido <juandagarrido@hotmail.com>

--- a/src/components/profile-view/profile-view.html
+++ b/src/components/profile-view/profile-view.html
@@ -11,3 +11,4 @@
     </ion-item>
   </ion-card-content>
 </ion-card>
+<button ion-button clear color="danger" (click)="signOut()">Sign out</button>
