--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,64 +1,64 @@
 page-home {
 
   .app-title {
-    margin-top: 5%;
+    //margin-top: 5%;
 
     #title {
       font-size: 2.0em;
-      font-family: fantasy;
+      font-family: Chalkboard;
+      color: white;
+    }
+  }
+
+  .body {
+    background-color: #428957;
+    align-items: center;
+
+    .background {
+      background: url("../../assets/imgs/homePageBG2.png");
+      background-size: 107%;
+
+
+      background-repeat: no-repeat;
+      //position: fixed;
+      //margin-top: 0%;
     }
 
-  }
-
-  .body{
     //background: repeating-linear-gradient(to bottom, royalblue 51%, deepskyblue);
-    //background: repeating-linear-gradient(to bottom, #D44420 0%, darkorange);
-    //background: url("../../../resources/mac_logo.png")
-  }
+    //background-color: #D44420;
 
-  .round-button1 {
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 330px;
-    margin-bottom: auto;
+    .button1 {
+      background-color: transparent;
+      border: white 3px double;
+      color: white;
+      text-align: center;
+      display: inline-block;
+      font-size: 180%;
+      cursor: pointer;
+      margin-top: 145%;
+      font-family: Chalkboard;
+      box-shadow: none;
+    }
 
-    display:block;
-    width:200px;
-    height:40px;
-    line-height:50px;
-    color:#f5f5f5;
-    text-align:center;
-    //background: #464646;
-    background-color: transparentize(#464646, 0.6);
-    box-shadow: 0 0 3px gray;
-    font-size:20px;
-    font-weight:bold;
-  }
+    .button2 {
+      background-color: #428957; /* Green */
+      border: double white 3px;
 
-  .round-button2 {
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 10px;
-    margin-bottom: 30px;
+      color: white;
+      text-align: center;
+      font-size: 180%;
+      font-family: Chalkboard;
+      box-shadow: none;
+    }
 
-    display:block;
-    width:200px;
-    height:40px;
-    line-height:50px;
-    //border: 4px solid royalblue;
-    //border-radius: 50%;
-    //color:#f5f5f5;
+    .button:hover {
+      //background-color: #;
 
-    text-align:center;
-    //background: #464646;
-    background-color: transparentize(#464646, 0.6);
-
-    box-shadow: 0 0 3px gray;
-    font-size:20px;
-    font-weight:bold;
-  }
-
-  .round-button:hover {
-    background: #262626;
   }
 }
+
+
+
+}
+
+
