--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -39,8 +39,7 @@ $colors: (
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222,
-  macorange:  #D44420
-
+  chalkboardgreen: #428957
 );
 
 
