Changed colors and images for the courselist page

--- a/src/components/course-list/course-list.html
+++ b/src/components/course-list/course-list.html
@@ -1,6 +1,6 @@
 <ion-list>
   <ion-list-header *ngIf="profile.student" no-lines no-padding no-margin>
-    <button
+    <button class="dropdown-button"
       detail-none
       name="student"
       ion-item
