--- a/src/components/course-list/course-list.scss
+++ b/src/components/course-list/course-list.scss
@@ -1,5 +1,22 @@
-.courselist {
-  background-color: white;
-  font-family: "Al Bayan";
-  margin: 4px;
-}
+
+
+
+
+  .courselist {
+    background: transparent;
+    border-bottom: white 3px solid;
+    //font-family: Chalkboard;
+    color: white;
+    margin: 4px;
+  }
+
+  .dropdown-button{
+    background-color: transparent;
+    border: white solid 2px;
+    color: white;
+    //font-family: Chalkboard;
+  }
+
+
+
+
