--- a/src/components/sign-up-form/sign-up-form.html
+++ b/src/components/sign-up-form/sign-up-form.html
@@ -33,7 +33,7 @@
 
       <ion-row>
         <div>
-          <button ion-button (click)="register()" [disabled]="registerForm.invalid">Register</button>
+          <button ion-button (click)="register()" [disabled]="registerForm.invalid">Sign Up</button>
         </div>
       </ion-row>
     </ion-card-content>
