made changes to navbar

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -40,7 +40,8 @@ $colors: (
   light:      #f4f4f4,
   dark:       #222,
   chalkboardgreen: #428957,
-  brown:      #654321
+  brown:      #654321,
+  white:      #FFFFFF
 );
 
 
