--- a/src/pages/courses/courses.scss
+++ b/src/pages/courses/courses.scss
@@ -1,19 +1,32 @@
 page-student-courses {
   .navBar{
-    //background-color: #428957;
-    //color: #32db64;
-    .backgroundimage{
-      background: url("../../assets/imgs/woodbrown.jpg");
-      background-size: cover;
 
+    .backgroundimage{
+      background: url("../../assets/imgs/woodbrown.jpg") no-repeat center center fixed;
+      background-size: cover;
+      position: fixed;
+      top: 0;
+      left: 0;
+
+      min-width: 100%;
+      min-height: 100%;
+
+      .title{
+        color: white;
+      }
+
+      .endbutton{
+        color: white;
+        height: 50px;
+      }
     }
+
+
 
   }
 
   .body {
     background-color: #428957;
     background: url("../../assets/imgs/chalkboard.png");
-
-
   }
 }
