Added new page and component for student queue

--- a/src/components/course-office-hours/course-office-hours.html
+++ b/src/components/course-office-hours/course-office-hours.html
@@ -4,7 +4,7 @@
     Current Office Hours
   </ion-card-header>
   <ion-card-content>
-    <button ion-button padding clear small>
+    <button ion-button padding clear small [navPush]="'StudentQueuePage'">
       Ends at 4:30 pm
     </button>
   </ion-card-content>
