Designed queue and added the component

--- a/src/components/queue-for-students/queue-for-students.html
+++ b/src/components/queue-for-students/queue-for-students.html
@@ -1,4 +1,32 @@
 <!-- Generated template for the QueueForStudentsComponent component -->
-<div>
-  {{text}}
-</div>
+<ion-card>
+  <ion-card-header>
+    Students in Queue
+  </ion-card-header>
+  <ion-card-content>
+    <ion-list>
+      <ion-item>
+        <h5 item-start>Raza Khalid</h5>
+        <ion-badge item-end>1</ion-badge>
+      </ion-item>
+      <ion-item>
+        <h5 item-start>David Peletz</h5>
+        <ion-badge item-end>2</ion-badge>
+      </ion-item>
+      <ion-item>
+        <h5 item-start>Juan Da</h5>
+        <ion-badge item-end>3</ion-badge>
+      </ion-item>
+      <ion-item>
+        <h5 item-start>Salman Ahmed</h5>
+        <ion-badge item-end>+</ion-badge>
+      </ion-item>
+    </ion-list>
+  </ion-card-content>
+</ion-card>
+
+<!--<ion-card>-->
+  <!--<ion-card-header>-->
+    <!--Check In-->
+  <!--</ion-card-header>-->
+<!--</ion-card>-->
