--- a/src/components/edit-hours-form/edit-hours-form.html
+++ b/src/components/edit-hours-form/edit-hours-form.html
@@ -15,7 +15,7 @@
 
             <ion-item>
               <ion-label floating>Location</ion-label>
-              <ion-input [(ngModel)]="officeHour.location" name="first"></ion-input>
+              <ion-input [(ngModel)]="officeHour.location" [value]="officeHour.location" name="first"></ion-input>
             </ion-item>
 
             <ion-list>
