Studen-queue instructor-view front-end completed; right now both queue views are shown, for comparative purposes

--- a/src/components/course-office-hours/course-office-hours.html
+++ b/src/components/course-office-hours/course-office-hours.html
@@ -32,7 +32,7 @@
   </ion-card-content>
 </ion-card>
 
-<!--Only if instructor is logged on-->
+<!--If instructor for the class-->
 <ion-card>
   <ion-card-header [navPush]="'EditHoursPage'" [navParams]="{courseKey: courseKey}">
     Edit Office Hours
