--- a/src/components/edit-hours-form/edit-hours-form.html
+++ b/src/components/edit-hours-form/edit-hours-form.html
@@ -1,56 +1,61 @@
-<button ion-button align="center" (click)="addOfficeHourSlot()">Add Office Hours</button>
-<form #editOfficeHourForm="ngForm" novalidate>
+<ion-row center>
+  <ion-col text-center>
+  <button ion-button round (click)="addOfficeHourSlot()">Add Office Hours</button>
+  </ion-col>
+</ion-row>
 
+<form #editOfficeHourForm="ngForm" novalidate>
   <ion-slides pager>
     <div *ngFor="let officeHour of officeHoursList; let i = index">
       <ion-slide *ngIf="i > 0">
         <ion-card>
+          <ion-card-header>
+            Office Hour
+          </ion-card-header>
           <ion-card-content>
-            <h1>Office Hour</h1>
-
-            <ion-item>
-              <ion-label>My office hours</ion-label>
-              <ion-toggle></ion-toggle>
-            </ion-item>
-
-            <ion-item>
-              <ion-label floating>Location</ion-label>
-              <ion-input [(ngModel)]="officeHour.location" [value]="officeHour.location" name="first"></ion-input>
-            </ion-item>
-
             <ion-list>
-              <ion-list-header>
-                Time Slot
-              </ion-list-header>
+
               <ion-item>
-                <ion-label>Start Time</ion-label>
+                <ion-label>I'm Instructing!</ion-label>
+                <ion-toggle></ion-toggle>
+              </ion-item>
+
+              <ion-item>
+                <ion-label stacked>Location</ion-label>
+                <ion-input [(ngModel)]="officeHour.location" [value]="officeHour.location" name="first"></ion-input>
+              </ion-item>
+
+              <ion-item>
+                <ion-label stacked>Start Time</ion-label>
                 <ion-datetime displayFormat="hh:mm a"></ion-datetime>
               </ion-item>
               <ion-item>
-                <ion-label>End Time</ion-label>
+                <ion-label stacked>End Time</ion-label>
                 <ion-datetime displayFormat="hh:mm a"></ion-datetime>
               </ion-item>
+              <ion-item>
+                <ion-label stacked>Day</ion-label>
+                <ion-select>
+                  <ion-option>Monday</ion-option>
+                  <ion-option>Tuesday</ion-option>
+                  <ion-option>Wednesday</ion-option>
+                  <ion-option>Thursday</ion-option>
+                  <ion-option>Friday</ion-option>
+                  <ion-option>Saturday</ion-option>
+                  <ion-option>Sunday</ion-option>
+                </ion-select>
+              </ion-item>
+
+              <ion-row>
+                <ion-col>
+                  <button ion-button color="dark" clear (click) = "addOfficeHours(officeHour)">Save</button>
+                </ion-col>
+              </ion-row>
+
             </ion-list>
-
-            <ion-item>
-              <ion-label floating>Day of Week</ion-label>
-              <ion-select>
-                <ion-option>Monday</ion-option>
-                <ion-option>Tuesday</ion-option>
-                <ion-option>Wednesday</ion-option>
-                <ion-option>Thursday</ion-option>
-                <ion-option>Friday</ion-option>
-                <ion-option>Saturday</ion-option>
-                <ion-option>Sunday</ion-option>
-              </ion-select>
-            </ion-item>
-
-            <button ion-button color = "primary" (click) = "addOfficeHours(officeHour)">Save</button>
-
           </ion-card-content>
         </ion-card>
       </ion-slide>
     </div>
   </ion-slides>
-
 </form>
