Removed the need to scroll on the homepage, fixed some alignment issues with login and signup buttons, reorganized code for background image

--- a/src/components/course-list/course-list.html
+++ b/src/components/course-list/course-list.html
@@ -26,7 +26,7 @@
     </ion-list>
   </ion-list-header>
   <ion-list-header *ngIf="profile.instructor" no-lines no-padding no-margin>
-    <button
+    <button class="dropdown-button"
       detail-none
       name="instructor"
       ion-item
